A bit of WIP re-styling.

--- a/components/ModPlayer/ModPlayer.module.scss
+++ b/components/ModPlayer/ModPlayer.module.scss
@@ -1,26 +1,36 @@
 @use './Themes/twilight-5.scss';
 @use './Themes/blessing.scss';
 
+@mixin border {
+  // Funky borders
+  outline: twilight-5.$primary-border 8px solid;
+  border: twilight-5.$secondary-border 8px solid;
+  border-bottom: 0;
+  border-right: 0;
+  box-shadow: 8px 8px 0 8px twilight-5.$secondary-border;
+}
+
 .container {
   display: flex;
-  flex-wrap: wrap-reverse;
   width: 100%;
 
   color: twilight-5.$text-colour;
 
   .column {
+    @include border();
+
     flex: auto;
 
     margin: 32px;
     padding: 64px;
     width: 100%;
 
-    // Funky borders
-    outline: twilight-5.$primary-border 8px solid;
-    border: twilight-5.$secondary-border 8px solid;
-    border-bottom: 0;
-    border-right: 0;
-    box-shadow: 8px 8px 0 8px twilight-5.$secondary-border;
+
+    &.header {
+      .title {
+        text-align: center;
+      }
+    }
 
     &.playlist {
       float: left;
@@ -29,11 +39,11 @@
     &.playInfo {
       float:right;
     }
-  }
 
-  @media (min-width: 768px) {
-    .column {
-      width: 45%;
+    @media (min-width: 768px) {
+        width: 45%;
     }
   }
+
+
 }
